<resources>
    <string name="app_name">KalenderAdapter</string>

    <string name="card_settings">Zugangsdaten</string>
    <string name="card_settings_extended">Einstellungen</string>
    <string name="card_settings_user">Nutzername</string>
    <string name="card_settings_password">Passwort</string>
    <string name="card_settings_url">URL</string>

    <string name="card_calendar">Kalenderauswahl</string>
    <string name="card_calendar_description">Verfügbare Kalender</string>
    <string name="bt_start_download">Kalendereinträge importieren</string>
    <string name="bt_rights_managment">Zugriffsrechte erneut anfragen</string>
    <string name="bt_deleteAll">Synchronisierte Einträge löschen</string>
    <string name="bt_empty_complete_calendar">Gesamten Kalender leeren</string>

    <string name="card_about">Über</string>
    <string name="about_text">Diese App ermöglicht den Import von Kalenderdaten im ICS in einen lokalen Kalender. Die Datenübertragung erfolgt dabei über eine sichere HTTPS-Verbindung und eine Digest-Authentifizierung beim Datenabruf.</string>
    <string name="about_security">Sicherheitshinweis!\nDie eingegbenen Zugangsdaten werden aus Kompatibilitätsgründen in einer nicht gesicherten Form abgespeichert. Für den gängigen Anwendungsfall stellt dies kein Risiko dar. Sollte aber ein Dritter physischen Zugriff auf das Gerät bekommen oder ein gerootetes Gerät verwendet werden, sind die Zugangsdaten gefährdet!\nEs wird die Verwendung eines Gerätepasswortes empfholen!</string>
    <string name="about_license">Dieses Projekt ist Open Source und steht unter der GNU GPL v3.0!\nDu findest das Repository unter\n<a href="https://github.com/firesoft-de/KalenderAdapter">https://github.com/firesoft-de/KalenderAdapter</a>\n\nDer Lizenztext ist unter\n<a href="https://www.gnu.org/licenses/gpl-3.0.de.html#content">https://www.gnu.org/licenses/gpl-3.0.html</a>\neinsehbar. \n\n Eingesetzte Bibliotheken \n - Android-SwitchIcon von Evgenii Zagumennyi \n - Material Icons von Google</string>
    <string name="about_version">App-Version</string>
    <string name="about_appname">KalenderAdapter</string>

    <string name="switch_service_off">Hintergrundsynchronisierung inaktiv</string>
    <string name="switch_service_on">Hintergrundsynchronisierung aktiv</string>
    <string name="service_sync_every">Synchronisierung mit einem Intervall von (HH:mm)</string>
    <string name="service_sync_from">beginnend um (HH:mm)</string>
    <string name="message_version_unknown">Version unbekannt</string>
    <string name="background_service">Hintergrundsynchronisierung</string>
    <string name="replace_existing_events">Vorhandene Einträge bei der Synchronisierung ersetzen</string>
    <string name="add_reminder">Erinnerungen hinzufügen</string>
    <string name="inteligent_reminder">Erinnerungen intelligent (anhand des Terminstatus) setzen</string>
    <string name="settings_reset">Einstellungen zurücksetzen</string>
    <string name="usage_informations">Bitte zuerst im nachfolgenden Auswahlfeld einen Kalender auswählen in welchen die Kalenderdaten importiert werden sollen. Anschließend die URL und die Zugangsdaten zum Server eingeben und auf "Kalendereinträge importieren" klicken.\nEs wird empfohlen über die vorinstallierte oder eine andere Kalenderanwendung einen neuen Kalender anzulegen der nur durch diese App genutzt wird. Bei gemeinsamer Nutzung mit anderen Anwendungen kann es zu Datenverlusten kommen.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_text">Um die Termine korrekt in den Kalender übernehmen zu können, benötigt diese App eine Zugriffsberechtigung auf Ihren Kalender.\nSie werden nun einen Systemdialog zur Freigabe der Berechtigung angezeigt bekommen. Falls Sie die Berechtigung verweigern, wird die App nicht wie erwartet funktionieren.</string>
    <string name="info_delete_text">Achtung!\nSie sind dabei alle Einträge des Kalenders zu löschen. Sind Sie sich sicher das Sie dies tun wollen?\nFalls nein, verwenden Sie bitte die Zurück-Funktion Ihres Telefons.</string>
    <string name="info_import_successfull">Alle Termine erfolgreich hinzugefügt</string>

    <string name="info_notification_text">Der lokale Kalender wurde mit dem Server synchronisiert.</string>
    <string name="info_notification_deleted_entries">Gelöschte Einträge: </string>
    <string name="info_notification_added_entries">Hinzugefügt Einträge: </string>
    <string name="info_notification_title">Synchronisierung</string>

    <string name="error_time_text">Die eingegebene Zeit ist fehlerhaft formatiert. Es wird eine Eingabe in Form von HH:MM erwartet. Dabei steht HH für die Stunden und MM für die Minuten.</string>

    <string name="info_bt_ok">Ok</string>
    <string name="info_bt_yes">Ja</string>
    <string name="info_bt_no">Nein</string>

    <string name="debug_delete_all_info">Ja, alle Einträge löschen</string>

    <string name="error_no_calendars_found">Es konnten keine Kalender gefunden werden.</string>
    <string name="error_fields_not_filled">Bitte alle Eingabefelder ausfüllen!</string>
    <string name="error_addCalendarEntry">Eine Sicherheitsausnahme ist aufgetreten! (CalendarManager.addCalenderEntry (Reminders)</string>
    <string name="error_service_times_unchangeable">Änderung konnte nicht übernommen werden! Hintergrundservice läuft nicht!</string>
    <string name="info_extinction_successfull">Alle Einträge erfolgreich gelöscht!</string>
    <string name="error_no_network">Es konnte keine Netzwerkverbindung gefunden werden!</string>
    <string name="error_download_failed">Download fehlgeschlagen! HTTP-Response:</string>
    <string name="error_failed_to_create_entry">Konnte Eintrag nicht erstellen! Eintragsname:</string>
    <string name="error_background_service">Während der Hintergrundsynchronisation ist ein Fehler aufgetreten! Fehlermeldung:</string>

</resources>
