<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/MainFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<Button-->
            <!--android:id="@+id/btAddDummy"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="Kalendereintrag hinzufügen"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

        <android.support.v7.widget.CardView
            android:id="@+id/card_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/tv_card_calendar_description"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_highlight"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/card_calendar"
                    tools:text="Platzhalter" />

                <TextView
                    android:id="@+id/tV_spinner"
                    style="@style/AppTheme.TextViewHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_calendar_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_calendar_description" />

                <Spinner
                    android:id="@+id/spinner_calendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="16dp"
                    android:minWidth="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_spinner" />

                <Button
                    android:id="@+id/bt_startDownload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/bt_start_download"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_progress" />

                <TextView
                    android:id="@+id/tV_progress"
                    style="@style/AppTheme.TextViewHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_calendar"
                    tools:text="Fortschritt 1/62" />

                <Button
                    android:id="@+id/bt_deleteAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_deleteAll"
                    app:layout_constraintEnd_toEndOf="@+id/bt_startDownload"
                    app:layout_constraintStart_toStartOf="@+id/bt_startDownload"
                    app:layout_constraintTop_toBottomOf="@+id/bt_startDownload" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/tv_card_settings_description"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_highlight"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/card_settings"
                    tools:text="Platzhalter" />

                <TextView
                    android:id="@+id/tV_url_description"
                    style="@style/AppTheme.TextViewHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_settings_url"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_settings_description" />

                <TextView
                    android:id="@+id/tV_user_description"
                    style="@style/AppTheme.TextViewHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_settings_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eT_url" />

                <TextView
                    android:id="@+id/tV_pw_description"
                    style="@style/AppTheme.TextViewHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_settings_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eT_user" />

                <EditText
                    android:id="@+id/et_pw"
                    style="SettingsInputFields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/tV_pw_description"
                    app:layout_constraintTop_toTopOf="@+id/tV_pw_description"
                    android:text=""/>

                <EditText
                    android:id="@+id/eT_user"
                    style="SettingsInputFields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tV_user_description"
                    app:layout_constraintTop_toTopOf="@+id/tV_user_description"
                    android:text=""/>

                <EditText
                    android:id="@+id/eT_url"
                    style="SettingsInputFields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tV_url_description"
                    app:layout_constraintTop_toTopOf="@+id/tV_url_description"
                    android:text=""/>


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">


                <TextView
                    android:id="@+id/tv_card_about_title"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_highlight"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/card_about"
                    tools:text="Platzhalter" />

                <TextView
                    android:id="@+id/about_app_name"
                    style="@style/AboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/about_appname"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size_highlight"
                    app:layout_constraintLeft_toRightOf="@+id/about_imageView"
                    app:layout_constraintTop_toBottomOf="@id/tv_card_about_title"/>

                <ImageView
                    android:id="@+id/about_imageView"
                    style="@style/AboutText"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:src="@mipmap/ic_logo_simple"
                    app:layout_constraintLeft_toLeftOf="@id/tv_card_about_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_card_about_title" />

                <TextView
                    android:id="@+id/about_version_static"
                    style="@style/AboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_version"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintTop_toBottomOf="@id/about_app_name"
                    app:layout_constraintLeft_toRightOf="@id/about_imageView"/>

                <TextView
                    android:id="@+id/about_version"
                    style="@style/AboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintLeft_toRightOf="@id/about_version_static"
                    app:layout_constraintTop_toBottomOf="@id/about_app_name"
                    tools:text="v0.3.1" />

                <TextView
                    android:id="@+id/about_description"
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text"
                    app:layout_constraintTop_toBottomOf="@id/about_version"/>

                <TextView
                    android:id="@+id/about_license"
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_license"
                    app:layout_constraintTop_toBottomOf="@id/about_description"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>