<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.  David Schlossarczyk
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ For the full license visit https://www.gnu.org/licenses/gpl-3.0.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUp_Mainframe">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_textView"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/info_delete_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bt_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundView" />

    <ImageView
        android:id="@+id/info_imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_alert"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Icon symboling user attention needed" />


    <Button
        android:id="@+id/bt_yes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/info_bt_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_textView"
        android:backgroundTint="@color/information"
        android:textColor="@color/text_white"/>

    <Button
        android:id="@+id/bt_no"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/info_bt_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_yes"
        app:layout_constraintTop_toTopOf="@id/bt_yes"
        app:layout_constraintBottom_toBottomOf="@id/bt_yes"
        android:backgroundTint="@color/information"
        android:textColor="@color/text_white"/>

</android.support.constraint.ConstraintLayout>